--- a/views/layout.erb
+++ b/views/layout.erb
@@ -32,7 +32,7 @@
   	        <div class="collapse navbar-collapse">
   	          <ul class="nav navbar-nav">
   	            <li class="active"><a href="/">Home</a></li>
-  	            <li><a href="/posts/create">New Post</a></li>
+  	            <li><a href="/posts/new">New Post</a></li>
   	            <li><a href="/analytics/posts">Post Analytics (JSON) </a></li>
   	            <li><a href="/analytics/blog">Blog Analytics (JSON) </a></li>
   	          </ul>
